<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>system_monitor_ros</name>
  <version>0.1.0</version>
  <description>system monitor for ros2</description>
  <maintainer email="yaruo0406@gmail.com">haru</maintainer>
  <license>BSD</license>
  <exec_depend>system_monitor_ros_msg</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
